# LearningModern3DGraphicsProgrammingExample

./: .ycm_extra_conf.py  CMakeLists.txt  README.md  _vimrc_local.vim
include/: common.h  glsl_program.h  main.cpp
shader/tut1/: hello_triangle.frag
shader/tut2/: FragPosition.frag  FragPosition.vert  VertexColor.frag  VertexColor.vert
shader/tut3/: .move_triangle_3.vert.swp  move_triangle_1.vert  move_triangle_2.vert  move_triangle_3.vert
shader/tut4/: manual_perspective.frag  manual_perspective.vert
src/: CMakeLists.txt  tut_template.cpp
src/tut1/: CMakeLists.txt  hello_triangle.cpp
src/tut2/: CMakeLists.txt  fg_position_color  frag_position_color.cpp  vertex_color.cpp  vertex_color_various_buffer  vertex_color_various_buffer.cpp
src/tut3/: .move_triangle_3.cpp.swp  CMakeLists.txt  move_triangle_1.cpp  move_triangle_2.cpp  move_triangle_3.cpp
src/tut4/: .manual_perspective.cpp.swp  CMakeLists.txt  manual_perspective.cpp
